WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314330
Books using excessive `column-count: 1` break
https://bugs.webkit.org/show_bug.cgi?id=314330
Summary
Books using excessive `column-count: 1` break
fantasai
Reported
2026-05-07 11:02:25 PDT
From
rdar://171766396
there seems to be a fair amount of content that regressed from
bug 299836
because it's assuming `column-count: 1` doesn't create a multi-column box, and our multicol implementation can't handle nested fragmentation very well. (One book specified `column-count: 1` on *, even. T_T) Ideally we fix the multicol layout issues that are causing problems and/or patch the books, but in the meantime it seems like we need to revert the fix for
bug 299836
.
Attachments
simplified testcase from the radar
(2.77 KB, application/epub+zip)
2026-05-07 16:12 PDT
,
fantasai
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
fantasai
Comment 1
2026-05-07 11:15:38 PDT
<
rdar://problem/171766396
>
fantasai
Comment 2
2026-05-07 11:16:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64481
fantasai
Comment 3
2026-05-07 16:12:09 PDT
Created
attachment 479525
[details]
simplified testcase from the radar
fantasai
Comment 4
2026-05-07 16:15:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64507
EWS
Comment 5
2026-05-12 16:39:27 PDT
Committed
313114@main
(d97b21bef909): <
https://commits.webkit.org/313114@main
> Reviewed commits have been landed. Closing PR #64507 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug