Treat `column-count: 1` as `column-count: auto` in Apple Books https://bugs.webkit.org/show_bug.cgi?id=314330 rdar://171766396

Reviewed by Alan Baradlay.

There are some iBooks that set `column-count: 1` where they probably
should use `column-count: auto`, and this is creating nested multicol
situations that are not printing properly (because we don't fragment
multicol correctly). This change treats `1` the same as `auto` in
Apple Books until we're able to fix the underlying problem.

This is a follow-up to https://commits.webkit.org/300787@main
which fixed https://bugs.webkit.org/show_bug.cgi?id=299836

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::willCreateColumns const):
(WebCore::RenderBlockFlow::requiresColumns const): Deleted.

Canonical link: https://commits.webkit.org/313114@main